--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>Vehicle Manager</title>
+    <title>Email Campaign</title>
     <!-- Bootstrap -->
     <link href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css"
           rel="stylesheet" media="screen"/>
@@ -44,13 +44,13 @@
                                    name="emailId"/>
                         </div>
                         <div class="form-group">
-                            <label for="userFirstNameId">Description</label>
+                            <label for="userFirstNameId">First Name</label>
                             <input type="text" name="firstName" class="form-control" id="userFirstNameId"
                                    placeholder="Enter first name ..."/>
                         </div>
 
                         <div class="form-group">
-                            <label for="userLastNameId">Description</label>
+                            <label for="userLastNameId">Last Name</label>
                             <input type="text" name="lastName" class="form-control" id="userLastNameId"
                                    placeholder="Enter last name ..."/>
                         </div>
