--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,12 +11,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Email Campaign</a>
+            <a class="navbar-brand" th:href="@{/}">Email Campaign</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li th:classappend="${module == 'home' ? 'active' : ''}">
-                    <a href="#" th:href="@{/}">Home</a>
+                    <a href="#" th:href="@{/campaign}">Campaign</a>
                 </li>
                 <li th:classappend="${module == 'template' ? 'active' : ''}">
                     <a href="#" th:href="@{/emailTemplate}">Email Template</a>
