--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,9 +11,16 @@
     <link href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css"
           rel="stylesheet" media="screen"/>
 
+    <script src="/webjars/jquery/3.2.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
+
     <script src="/webjars/sockjs-client/1.0.2/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/2.3.3/stomp.min.js"></script>
     <script src="/static/app.js"></script>
+
+    <script src="/static/d3.min.js"></script>
+    <link rel="stylesheet" href="/static/bar.chart.min.css"/>
+    <script src="/static/jquery.bar.chart.min.js"></script>
 </head>
 <body>
 
@@ -26,6 +33,9 @@
     <div class="container">
         <button type="button" class="btn btn-info" id="loadDataId">Load Data</button>
     </div>
+
+    <div id="chtAnimatedBarChart" class="example"></div>
+
 
     <div class="container">
         <h2>Stats</h2>
@@ -43,7 +53,7 @@
 
 
             <tbody>
-            <tr  th:each="stat : ${stats}" th:id="${stat.uuid}">
+            <tr th:each="stat : ${stats}" th:id="${stat.uuid}">
                 <td th:text="${stat.campaignName}" class="camName"></td>
                 <td th:text="${stat.templateName}" class="tempName"></td>
                 <td th:text="${stat.totalSent}" class="totalSent"></td>
@@ -56,8 +66,6 @@
         </table>
     </div>
 
-    <script src="/webjars/jquery/3.2.0/jquery.min.js"></script>
-    <script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
     <script>
     $(document).ready(
         function () {
@@ -102,8 +110,23 @@
                 });
             });
 
+        const myData = [
+         { "group_name": "Google", "name": "Jan", "value": 38367 },
+         { "group_name": "Apple", "name": "Jan", "value": 28827 },
+         { "group_name": "Microsoft", "name": "Jan", "value": 38674 },
+         { "group_name": "Samsung", "name": "Jan", "value": 40110 }
+        ]
+
+
+			$('#chtAnimatedBarChart').animatedBarChart({
+				data: myData
+			});
+
         });
-</script>
+
+
+
+    </script>
 
 </body>
 </html>
