--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,94 +15,52 @@
     <script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
 
     <script src="/webjars/sockjs-client/1.0.2/sockjs.min.js"></script>
-    <script src="/webjars/stomp-websocket/2.3.3/stomp.min.js"></script>
-    <script src="/static/homewebsocket.js"></script>
+    <script src="/webjars/stomp-websocket/2.3.3/stomp.js"></script>
 
     <script src="/static/d3.min.js"></script>
     <link rel="stylesheet" href="/static/bar.chart.min.css"/>
     <script src="/static/jquery.bar.chart.min.js"></script>
+
+    <script src="/static/homewebsocket.js"></script>
+
+    <style>
+        .loader {
+          border: 16px solid #f3f3f3;
+          border-radius: 50%;
+          border-top: 16px solid #3498db;
+          width: 120px;
+          height: 120px;
+          -webkit-animation: spin 2s linear infinite; /* Safari */
+          animation: spin 2s linear infinite;
+        }
+
+        /* Safari */
+        @-webkit-keyframes spin {
+          0% { -webkit-transform: rotate(0deg); }
+          100% { -webkit-transform: rotate(360deg); }
+        }
+
+        @keyframes spin {
+          0% { transform: rotate(0deg); }
+          100% { transform: rotate(360deg); }
+        }
+    </style>
+
+
 </head>
 <body>
 
-
 <div th:replace="header :: header"></div>
 
+<div class="container" style="margin-top: 100px"/>
 
-<div class="container" style="margin-top: 100px">
+<div class="container">
+    <button type="button" class="btn btn-info" id="loadDataId">Populate Email Campaign Data</button>
+</div>
 
-    <div class="container">
-        <button type="button" class="btn btn-info" id="loadDataId">Load Data</button>
-    </div>
+<div class="container" style="margin-top: 100px"/>
 
-    <table>
-        <thead>
-            <th>Campaign Name</th>
-            <th>Template Name</th>
-
-        </thead>
-    </table>
-    <div id="chtAnimatedBarChart" class="example"></div>
-
-
-    <div class="container">
-        <h2>Stats</h2>
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>Campaign Name</th>
-                <th>Template Name</th>
-                <th>Total Sent</th>
-                <th>Total Delivered</th>
-                <th>Total Opened</th>
-                <th>Total Clicked</th>
-            </tr>
-            </thead>
-
-
-            <tbody>
-            <tr th:each="stat : ${stats}" th:id="${stat.uuid}">
-                <td th:text="${stat.campaignName}" class="camName"></td>
-                <td th:text="${stat.templateName}" class="tempName"></td>
-                <td th:text="${stat.totalSent}" class="totalSent"></td>
-                <td th:text="${stat.totalDelivered}" class="totalDelivered"></td>
-                <td th:text="${stat.totalOpened}" class="totalOpened"></td>
-                <td th:text="${stat.totalClicked}" class="totalClicked"></td>
-
-            </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <script>
-    $(document).ready(
-        function () {
-        connect();
-
-         $("#loadDataId").bind("click", function(){
-                  $.ajax({
-                    url: '/loadData',
-                    type: 'POST',
-                    success: function (response) {
-                        location.reload();
-                    }
-                });
-             });
-
-
-        const myData = [
-         { "group_name": "Sent", "name": "Jan", "value": 38367 },
-         { "group_name": "Delivered", "name": "Jan", "value": 28827 },
-         { "group_name": "Opened", "name": "Jan", "value": 38674 },
-         { "group_name": "Clicked", "name": "Jan", "value": 40110 }
-        ];
-
-        $('#chtAnimatedBarChart').animatedBarChart({
-            data: myData
-        });
-
-     });
-
-    </script>
+<div id="chtAnimatedBarChart" class="example"></div>
 
 </body>
 </html>
