--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,29 +23,6 @@
 
     <script src="/static/homewebsocket.js"></script>
 
-    <style>
-        .loader {
-          border: 16px solid #f3f3f3;
-          border-radius: 50%;
-          border-top: 16px solid #3498db;
-          width: 120px;
-          height: 120px;
-          -webkit-animation: spin 2s linear infinite; /* Safari */
-          animation: spin 2s linear infinite;
-        }
-
-        /* Safari */
-        @-webkit-keyframes spin {
-          0% { -webkit-transform: rotate(0deg); }
-          100% { -webkit-transform: rotate(360deg); }
-        }
-
-        @keyframes spin {
-          0% { transform: rotate(0deg); }
-          100% { transform: rotate(360deg); }
-        }
-    </style>
-
 
 </head>
 <body>
@@ -61,6 +38,10 @@
 <div class="container" style="margin-top: 100px"/>
 
 <div id="chtAnimatedBarChart" class="example"></div>
+
+<div id="loader" style="position: fixed; background: rgba(0,0,0,.5); width: 100%;height: 100%;top: 0; left: 0;display:none;">
+    <div style="transform: translate(-50%,-50%);top: 50%;left: 50%; color: white; position: absolute;">Loading ...</div>
+</div>
 
 </body>
 </html>
