--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,9 +31,20 @@
 
 <div class="container" style="margin-top: 100px"/>
 
+
 <div class="container">
-    <button type="button" class="btn btn-info" id="loadDataId">Populate Email Campaign Data</button>
+    <div class="row">
+        <div class="col-sm-3" >
+            <button type="button" class="btn btn-info" id="loadDataId">Populate Email Campaign Data</button>
+        </div>
+
+
+        <div class="col-sm-6" style="margin:">
+            <button type="button" class="btn btn-info" id="deleteDataId">Delete Email Campaign Data</button>
+        </div>
+    </div>
 </div>
+
 
 <div class="container" style="margin-top: 100px"/>
 
